fix swagger auth token in header, wire->golobby fix refresh tokens
